# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.130 2008/06/02 03:29:17 jer Exp $

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> timezone-data-2008b.ebuild:
  Stable for HPPA (bug #224305).

  01 Jun 2008; nixnut <nixnut@gentoo.org> timezone-data-2008b.ebuild:
  Stable on ppc wrt bug 224305

*timezone-data-2008c (31 May 2008)

  31 May 2008; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2008c.ebuild:
  Version bump #223827 by Rodrigo Severo.

  29 May 2008; Raúl Porcel <armin76@gentoo.org> timezone-data-2008b.ebuild:
  alpha/ia64/sparc/x86 stable

  04 Apr 2008; Brent Baude <ranger@gentoo.org> timezone-data-2008a.ebuild:
  stable ppc64, bug 215485

  03 Apr 2008; Brent Baude <ranger@gentoo.org> timezone-data-2008a.ebuild:
  stable ppc, bug 215485

  31 Mar 2008; Raúl Porcel <armin76@gentoo.org> timezone-data-2008a.ebuild:
  alpha/ia64/sparc/x86 stable wrt #215485

  30 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
  timezone-data-2008a.ebuild:
  amd64 stable wrt bug #215485

  30 Mar 2008; Jeroen Roovers <jer@gentoo.org> timezone-data-2008a.ebuild:
  Stable for HPPA (bug #215485).

*timezone-data-2008b (24 Mar 2008)

  24 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2008b.ebuild:
  Version bump #214540 by Rodrigo Severo.

  22 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2008a.ebuild:
  Add support for /etc/timezone.

*timezone-data-2008a (10 Mar 2008)

  10 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2008a.ebuild:
  Version bump #212931 by Rodrigo Severo.

  11 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> ChangeLog:
  amd64 stable wrt bug #209259

  08 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  timezone-data-2007k.ebuild:
  ppc stable, bug #209259

  08 Feb 2008; Brent Baude <ranger@gentoo.org> timezone-data-2007k.ebuild:
  stable ppc64, bug 209259
