@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2008c.ebuild,v 1.1 2008/05/31 10:23:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2008c.ebuild,v 1.3 2008/06/03 20:02:40 vapier Exp $
 
 EAPI="prefix"
 
@@ -58,23 +58,29 @@ pkg_config() {
 	# make sure the /etc/localtime file does not get stale #127899
 	local tz src
 
-	if [[ -e ${EROOT}/etc/timezone ]] ; then
-		src="/etc/timezone"
-		tz=$(<"${EROOT}"/etc/timezone)
-	else
+	if has_version '<sys-apps/baselayout-2' ; then
 		src="/etc/conf.d/clock"
 		tz=$(unset TIMEZONE ; source "${EROOT}"/etc/conf.d/clock ; echo ${TIMEZONE-FOOKABLOIE})
-		[[ -z ${tz} ]] && return 0
-		if [[ ${tz} == "FOOKABLOIE" ]] ; then
-			elog "You do not have TIMEZONE set in ${EPREFIX}/etc/conf.d/clock."
-			if [[ ! -e ${EROOT}/etc/localtime ]] ; then
-				cp -f "${EROOT}"/usr/share/zoneinfo/Factory "${EROOT}"/etc/localtime
-				elog "Setting /etc/localtime to Factory."
-			else
-				elog "Skipping auto-update of ${EPREFIX}/etc/localtime."
-			fi
-			return 0
+	else
+		src="/etc/timezone"
+		if [[ -e ${EROOT}/etc/timezone ]] ; then
+			tz=$(<"${EROOT}"/etc/timezone)
+		else
+			tz="FOOKABLOIE"
 		fi
+	fi
+	[[ -z ${tz} ]] && return 0
+
+	if [[ ${tz} == "FOOKABLOIE" ]] ; then
+		elog "You do not have TIMEZONE set in ${src}."
+
+		if [[ ! -e ${EROOT}/etc/localtime ]] ; then
+			cp -f "${EROOT}"/usr/share/zoneinfo/Factory "${EROOT}"/etc/localtime
+			elog "Setting /etc/localtime to Factory."
+		else
+			elog "Skipping auto-update of /etc/localtime."
+		fi
+		return 0
 	fi
 
 	if [[ ! -e ${EROOT}/usr/share/zoneinfo/${tz} ]] ; then
